[dp2] Fix alignment of buttons and record count.

--- a/to.etc.domui/src/main/resources/resources/themes/scss/winter/_datapager2.scss
+++ b/to.etc.domui/src/main/resources/resources/themes/scss/winter/_datapager2.scss
@@ -56,9 +56,16 @@ $pager2-button-bg: $alt-button-bg !default
 		}
 	}
 
+	.ui-dp2-buttons {
+		display: flex;
+		flex-direction: row;
+	}
+
 	.ui-dp2-nurec {
 		font-size: small;
 		vertical-align: middle;
+		padding: 0.5em 1em;
+		margin: 1px 0;
 	}
 	.ui-dp2-trunc {
 		display: inline-block;
